--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "envalid": "^8.0.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "winston": "^3.17.0"
   }
 }
