--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Muneeb",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
